--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                 Остальные контейнеры нужно скрыть. Способ сокрытия подойдёт любой.
                 Для удобства обращения из JS, вы можете добавить контейнерам id
                 или уникальные классы
-            -->
-      <div class="container" style="display: none">
+      -->
+      <div class="container" id="container-error" style="display: none">
         <div class="message">
           <span class="message__icon">
             <svg width="60" height="60" aria-hidden="true">
@@ -183,14 +183,15 @@
         </div>
       </div>
 
-      <div class="container">
+      <div class="container" id="container-contactors">
         <div class="users-nav">
           <div class="users-nav__tabs">
             <div class="tabs no-transition-global tabs--toggle-buy-sell" data-tabs="parent" data-delay="300">
               <div class="tabs__controls" data-tabs="controls">
                 <!-- При переключении с продавцов на покупателей и обратно нужно выделить активный пункт .is-active -->
-                <button class="tabs__control btn is-active" type="button" data-tabs="control">Купить</button>
-                <button class="tabs__control btn" type="button" data-tabs="control">Продать</button>
+                <button class="tabs__control btn is-active" id="tab-buy" type="button"
+                  data-tabs="control">Купить</button>
+                <button class="tabs__control btn" id="tab-sell" type="button" data-tabs="control">Продать</button>
               </div>
             </div>
           </div>
@@ -248,7 +249,7 @@
       </div>
 
       <!-- При переключении на карту нужно отобразить данный контейнер -->
-      <div class="container" style="display: none">
+      <div class="container" id="container-map" style="display: none">
         <div class="map">
           <!--
                         Карту нужно отрисовать в этот контейнер. Иконки для карты -
